Update SSInstanceHelper.java
SSInstance implementation
  stockCode, startDate, threshold, tradeType, sTDistance
  tradeDate, hmsList, maxCycle, targetRate

ssTradeSumLogFile, and ssTradeDetailsLogFile are generated